# robo-spline

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  robo_spline-config.cmake  robo_splineConfig.cmake  robo_splineUninstall.cmake.in
apps/: CMakeLists.txt  main.cpp  test_acc.cpp  test_regular.cpp
cmake/: Installing.cmake
docs/: CMakeLists.txt
include/: trajectory.hpp
include/robo_spline/: cubic_hermite_spline.hpp  cubic_hermite_spline_acc.hpp  trajectory.hpp
install/cmake/: robo_splineTargets-noconfig.cmake  robo_splineTargets.cmake
install/include/robo_spline/: trajectory.hpp
misc/redesign/: CMakeLists.txt  cubic_hermite_spline.hpp  hermite_spline.hpp  main.cpp  main2.cpp  phased_trajectory.hpp  phased_trajectory.old.hpp  test_phased.cpp  test_regular.cpp  trajectory.hpp  types.hpp
rspl/: CMakeLists.txt  cubic_hermite_spline.hpp  cubic_hermite_spline_acc.hpp  trajectory.hpp
src/: CMakeLists.txt  cubic_hermite_polynomial.hpp  cubic_hermite_polynomial_acc.hpp  cubic_hermite_spline.hpp  cubic_hermite_spline_acc.hpp  main.cpp  rspl.cpp  trajectory.hpp
src/cspl/: cspl.cpp  cubic_hermite_polynomial.hpp  cubic_hermite_polynomial_acc.hpp  cubic_hermite_polynomial_reg.hpp  i_cubic_hermite_polynomial.hpp  polynomal_linker.hpp  trajectory.hpp
src/examples/: main.cpp
